objects/ssot__PersonalizationDecision__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CampaignId__c</fullName>
        <label>Campaign</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeveloperName__c</fullName>
        <label>Developer Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Personalization Decision Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PersonalizationDecisionLifecycleStatus__c</fullName>
        <label>Personalization Decision LifecycleStatus</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PersonalizationDecisionPriority__c</fullName>
        <label>Personalization Decision Priority</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PersonalizationPointId__c</fullName>
        <label>Personalization Point</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PersonalizerId__c</fullName>
        <label>Personalizer</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1711101253399_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PersonalizationDecision_Personalizer_rel</label>
        <referenceTo>ssot__Personalizer__dlm</referenceTo>
        <relationshipLabel>PersonalizationDecision_Personalizer_rel</relationshipLabel>
        <relationshipName>rel_1711101253399_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1711101277720_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PersonalizationDecision_CampaignId_m_rel</label>
        <referenceTo>ssot__Campaign__dlm</referenceTo>
        <relationshipLabel>PersonalizationDecision_CampaignId_m_rel</relationshipLabel>
        <relationshipName>rel_1711101277720_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1711101279060_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PersonalizationDecision_Personalizat_rel</label>
        <referenceTo>ssot__PersonalizationPoint__dlm</referenceTo>
        <relationshipLabel>PersonalizationDecision_Personalizat_rel</relationshipLabel>
        <relationshipName>rel_1711101279060_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>